--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,16 @@
 			<version>5.9.3</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Mockito -->
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.6.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
