--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,15 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Mockito-inline -->
+		<!-- static メソッドのテストに使用-->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>5.2.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
