--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,27 @@
 			<version>0.26.6</version>
 		</dependency>
 
+		<!-- mybatis o/r mapper -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.5.13</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+
 		<!--- Junit 5 -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
